# fake-fluence-website

./: .env.example  .gitignore  README.md  index.html  tailwind.config.ts  vite.config.ts
Backend/: DEPLOYMENT.md  README.md  main.py  openai_media.py  pyproject.toml  requirements.txt
Backend/app/: __init__.py  config.py  dependencies.py  main.py
Backend/app/routers/: __init__.py  images.py  videos.py
Backend/app/schemas/: __init__.py  images.py  videos.py
Backend/app/services/: __init__.py  image_service.py  video_service.py
src/: App.tsx  index.css
src/components/: BrowseSection.tsx  ContentPreviewCarousel.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  InfluencerCard.tsx  InfluencerProfileDialog.tsx  LanguageSwitcher.tsx  MatchResultCard.tsx  Navbar.tsx  PricingSection.tsx  ProductUploadForm.tsx
src/components/booking/: BookingSummary.tsx  ContentPlanForm.tsx  GeneratedContentCard.tsx  GeneratedVariations.tsx  InstagramConnectDialog.tsx  PublishToInstagramButton.tsx  SwipeableVariations.tsx
src/data/: influencers.ts
src/hooks/: useContentGeneration.ts
src/i18n/: LanguageContext.tsx
src/i18n/translations/: de.ts  en.ts  es.ts  fr.ts  index.ts
src/integrations/supabase/: types.ts
src/lib/image/: prepareSoraInputReference.ts
src/pages/: BookCreator.tsx  Browse.tsx  GetStarted.tsx  Index.tsx
supabase/: config.toml
supabase/functions/generate-content/: index.ts
supabase/functions/instagram-api/: index.ts
supabase/functions/match-personas/: index.ts
supabase/migrations/: 20260208113408_71142c21-8bd4-49bd-8b9f-edcbd3b9abaa.sql
