[project]
name = "influencer-ai-studio-backend"
version = "0.1.0"
description = "FastAPI backend for image and video generation/editing (OpenAI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6.0",
    "openai>=1.55.0",
]
